Fixed: Agenda view on mobile

--- a/frontend/src/Calendar/Agenda/AgendaEvent.css
+++ b/frontend/src/Calendar/Agenda/AgendaEvent.css
@@ -108,7 +108,7 @@
 }
 
 @media only screen and (max-width: $breakpointSmall) {
-  .event {
+  .overlay {
     flex-direction: column;
   }
 
